Avoid the line wrapping problem for long activities (like editing a page)

--- a/app/styles/_activities.sass
+++ b/app/styles/_activities.sass
@@ -5,12 +5,12 @@
   +clearing
   p
     margin: 0
-    float: left
   .date
     float: right
     margin-top: 2px
     font-size: 10px
     color: #9DA3A7
+    padding-left: 4px
   .micro_avatar
     +rounded(3px)
   a
